--- a/jenkins-service.yaml
+++ b/jenkins-service.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins
+  namespace: cicd
 spec:
   type: NodePort
   ports:
     - port: 8080
       targetPort: 8080
+      nodePort: 38080
   selector:
     app: jenkins
