--- a/jenkins-deployment.yaml
+++ b/jenkins-deployment.yaml
@@ -16,8 +16,15 @@ spec:
           env:
             - name: JAVA_OPTS
               value: -Djenkins.install.runSetupWizard=false
+          volumeMounts:
+            - name: jenkins-home
+              mountPath: /var/jenkins_home              
           ports:
             - name: http-port
               containerPort: 8080
             - name: jnlp-port
               containerPort: 50000
+      volumes:
+        - name: jenkins-home
+          hostPath:
+            path: /Users/admin/Documents/jenkins-data
