--- a/jenkins-service.yaml
+++ b/jenkins-service.yaml
@@ -1,13 +1,31 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins
+  name: jenkins-externe
   namespace: cicd
 spec:
   type: NodePort
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 38080
+      nodePort: 32080
   selector:
     app: jenkins
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins
+  namespace: cicd
+spec:
+  selector:
+    app: jenkins
+  ports:
+  - name: jenkins-port
+    port: 8080
+    targetPort: 8080
+    protocol: TCP
+  - name: slave
+    port: 50000
+    targetPort: 50000
+    protocol: TCP
