--- a/jenkins-deployment.yaml
+++ b/jenkins-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: jenkins
-          image: jenkins/jenkins:tls
+          image: jenkins/jenkins:lts
           env:
             - name: JAVA_OPTS
               value: -Djenkins.install.runSetupWizard=false
